# smartrename

./: README.md  README_CN.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
docs/: GUI_ROADMAP.md  GUI_ROADMAP_CN.md  README.md  README_CN.md
smartrename/: __init__.py  main.py
smartrename.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
smartrename/core/: __init__.py  patterns.py  renamer.py  undo.py
smartrename/utils/: preview.py
tests/: test_patterns.py  test_renamer.py  test_undo.py
